--- a/4. Apple Basic Landing page/styles.css
+++ b/4. Apple Basic Landing page/styles.css
@@ -95,3 +95,32 @@ header{
 .icons img:hover{
     transform: scale(1.2);
 }
+@media screen and (max-width:900px) {
+    #container{
+       height:150vh;
+    }
+    #navbar{
+      display: none;  
+    }
+    .text{
+        width:80%;
+    }
+    .text p {
+        padding-left:0;
+    }
+    .button{
+      bottom:2rem;      
+    }
+  .content{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .img{
+   width:80%;
+  }
+  .icons {
+    width:100vw;
+    left:11%;
+  }
+}
