--- a/6.To-Do-list/styles.css
+++ b/6.To-Do-list/styles.css
@@ -6,7 +6,7 @@
 
 #background{
     height:100vh;
-    width:100vw; 
+    width:100%; 
     display: flex;
     justify-content: flex-start;
     align-items: center;
