--- a/6.To-Do-list/styles.css
+++ b/6.To-Do-list/styles.css
@@ -69,19 +69,21 @@ gap:1rem;
     background-color: white;
     color:black;
     width:80%;
-    height:7vh;
+    min-height:7vh;
     margin: 1rem auto;
     border-radius: 6px;
 }
 .inTask button{
-    width:8%;
-    height:50%;
+    display: block;
+    width:5rem;
+    min-height:100%;
     margin: 0 1rem;
     background-color: brown;
     color:white;
     border:1px solid black;
     border-radius: 6px;
     transition: all 0.1s ease-in;
+    cursor:pointer;
 }
 .inTask button:hover{
    transform:scale(1.1)
@@ -89,6 +91,8 @@ gap:1rem;
 .inTask p{
     font-size:1.3rem;
     margin: 0 1rem;
+    word-break:break-all;
+    width:90%;
 }
 
 @media screen and (max-width:767px) {
@@ -96,7 +100,7 @@ gap:1rem;
         width:90vw;
     }
     .submit{
-        width:15%;
+        min-width:15%;
     }
     .tasks{
         width:90vw;
@@ -106,8 +110,8 @@ gap:1rem;
         width:100%;
     }
     .inTask button{
-        width:15%;
-        height:70%;
+        min-width:15%;
+        min-height:2rem;
     }
 }   
 @media screen and (min-width:768px) {
@@ -124,7 +128,7 @@ gap:1rem;
         width:90%;
     }
     .inTask button{
-        width:4rem;
-        height:70%;
+        min-width:5rem;
+        min-height:2.5rem;
     }
 }   
