--- a/6.To-Do-list/styles.css
+++ b/6.To-Do-list/styles.css
@@ -12,6 +12,8 @@
     align-items: center;
     gap:5rem;
     flex-direction: column;
+    padding-bottom: 6rem;
+    position: relative;
 }
 
 .input{
@@ -94,7 +96,29 @@ gap:1rem;
     word-break:break-all;
     width:90%;
 }
-
+footer{
+    min-width: 10%;
+    background-color:lightgray ;
+    text-align: center;
+    position: absolute;
+    bottom:1rem;
+    font-size: 1.5rem;
+    padding:1rem 2rem;
+    border : 1px solid black;
+    border-radius: 16px;
+    height: 3rem;
+}
+footer a {
+    display: inline-block;
+    text-decoration: none;
+    color: brown;
+    font-weight: 600;
+    transition: text-decoration 1s;
+}
+#link:hover {
+    transform: translate(5%,-15%);
+    text-decoration: underline;
+}
 @media screen and (max-width:767px) {
     .input{
         width:90vw;
@@ -112,6 +136,12 @@ gap:1rem;
     .inTask button{
         min-width:15%;
         min-height:2rem;
+    }
+    footer{
+        width:90vw;
+        padding: 0;
+        min-height:4.5rem;
+        bottom:0.5rem;     
     }
 }   
 @media screen and (min-width:768px) {
