--- a/styles.css
+++ b/styles.css
@@ -13,19 +13,20 @@ body{
 }
 
 .title{
-    font-size: 3rem;
+    font-size: 2rem;
     color:#eee;
     text-align: center;
     margin-top:4rem;
 }
 .container{
-    width:60%;
-    height:65vh;
+    min-width:60%;
+    min-height:100px;
     margin: 15vh auto;
     display:flex;
     flex-wrap: wrap;
+    flex-direction: row;
     justify-content: space-around;
-    gap:1rem;
+    gap:3rem;
     background-color: #3f3f3f;
     border-radius: 18px;
     padding:1rem;
@@ -35,8 +36,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: calc((100% - 2rem) / 3);
-    height: 245px;
+    width:300px;
     transition: all 0.2s ease-in;
 }
 .project:hover{
@@ -49,8 +49,8 @@ body{
     color : white;
 }
 .image-container{
-    width: 300px;
-    height: 190px;
+    width: 100%;
+    height: 80%;
     margin:auto
 }
 .image-container img{
@@ -60,4 +60,5 @@ body{
 }
 .names{
     text-align: center;
+    font-size:1.6rem;
 }
