--- a/1.Color Flipper/styles.css
+++ b/1.Color Flipper/styles.css
@@ -17,9 +17,10 @@
     justify-content:space-between ;
     align-items: center;
     padding : 0 2vw;
+    transition: all 0.3s ease-in-out;
  }
 .center h4{
-    font-size:2.5rem;
+    font-size:2rem;
 }
 .links{
     display: flex;
@@ -36,6 +37,15 @@
 }
 .links a:hover {
      border-bottom: 3px solid black ;
+}
+.hamburger{
+    display: none;
+    width:30px;
+    cursor: pointer;
+    transition:all 0.3s ease-in;
+}
+.hamburger:hover{
+    transform: scale(1.1);
 }
 body{
     background-color:  #F6F1F1;  
@@ -68,12 +78,41 @@ main{
 main h2{
     color: white;
     background-color: #222;
-    font-size:4rem;
+    
+    font-size:2.5rem;
     border-radius: 12px;
     border:1px solid black ;
     padding:1.5rem;
-    margin-bottom: 2vh;
+    margin: 2vh;
 }
 .color { 
     color : #19A7CE;
+}
+
+@media screen and (max-width:380px) {
+    .center{
+        flex-direction: column;
+        align-items: start;
+        justify-content: start;
+        gap:1rem;
+        overflow: hidden;
+    }
+    .center.active{
+        height:24vh;
+    }
+    .links{
+        flex-direction: column;
+        gap:0.5rem;
+    }
+    .hamburger{
+        position: absolute;
+        top:7px;
+        right:5px;
+        display: inline-block;
+    }
+    main h2{
+        font-size: 1.5rem;
+        margin:0;
+        margin-bottom: 1rem;
+    }
 }
