--- a/1.Color Flipper/styles.css
+++ b/1.Color Flipper/styles.css
@@ -89,8 +89,9 @@ main h2{
     color : #19A7CE;
 }
 
-@media screen and (max-width:380px) {
+@media screen and (max-width:450px) {
     .center{
+        padding-top:10px;
         flex-direction: column;
         align-items: start;
         justify-content: start;
@@ -106,7 +107,7 @@ main h2{
     }
     .hamburger{
         position: absolute;
-        top:7px;
+        top:14px;
         right:5px;
         display: inline-block;
     }
