--- a/4. Apple Basic Landing page/styles.css
+++ b/4. Apple Basic Landing page/styles.css
@@ -10,8 +10,8 @@ body{
     min-height: 100vh;
 }
 #container { 
-    min-height:100vh;
-    width:100vw;
+    height:100%
+    width:100%;
     background-color: #1e1e1e;
     overflow:auto ;
     position: relative;
